<?xml version="1.0"?>
<package format="3">
  <name>robot_patrol</name>
  <version>0.1.0</version>
  <description>ROS2 patrol demo application</description>
  <maintainer email="dev@example.com">Dev</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <test_depend>ament_pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
